<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screensFragments.detailTasks.FragmentDetailTasks">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:id="@+id/ll_header"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/grey"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
</LinearLayout>

    <EditText
        android:id="@+id/tv_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="2dp"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:color="@color/black"
        android:hint="@string/hint_task_title"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_is_completed" />

    <CheckBox
        android:id="@+id/cb_is_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header" />

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cb_is_completed"
        app:layout_constraintBottom_toBottomOf="@+id/cb_is_completed"
        android:layout_marginStart="3dp"
        android:text="@string/date_amp_time"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cb_is_completed"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_description_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="5dp"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:background="@color/grey"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>